@@ -82,6 +82,10 @@ namespace DiscImageChef
             HelpText = "Checksums the whole disc.")]
         public bool WholeDisc { get; set; }
 
+        [Option('a', "adler32", DefaultValue = true,
+            HelpText = "Calculates Adler-32.")]
+        public bool DoAdler32 { get; set; }
+
         [Option('c', "crc32", DefaultValue = true,
             HelpText = "Calculates CRC32.")]
         public bool DoCRC32 { get; set; }
